compiler/eight-tests/tests/snapshots/ui/compiler_tests__ui@syntax__trivial__unexpected_token.test.snap
---
source: compiler/eight-tests/tests/compiler_tests.rs
description: compiler test suite for ui
info:
  program: eightc
  args:
    - tests/ui/syntax/trivial/unexpected_token.test
input_file: compiler/eight-tests/tests/ui/syntax/trivial/unexpected_token.test
snapshot_kind: text
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: syntax::unexpected_token

  × found unexpected token during parsing
   ╭─[tests/ui/syntax/trivial/unexpected_token.test:1:11]
 1 │ fn test() unexpected_token {
   ·           ────────┬───────
   ·                   ╰── was not expecting to find 'unexpected_token' in this position
   ╰────
